--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,50 @@
-{% extends "layout.html" %} {% block title %} Habit Tracker {% endblock %} {%
-block body %} {% endblock %}
+{% extends "layout.html" %} {% block title %} Habit Tracker{% endblock %}
+{%block body %}
+<table class="table table-striped table-hover table-bordered">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">Habits</th>
+      <th scope="col">Monday</th>
+      <th scope="col">Tuesday</th>
+      <th scope="col">Wednesday</th>
+      <th scope="col">Thursday</th>
+      <th scope="col">Friday</th>
+      <th scope="col">Saturday</th>
+      <th scope="col">Sunday</th>
+      <th scope="col">Streak</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for row in habits %}
+    <tr>
+      <th scope="row">{{ row.habit }}</th>
+      <td>&#10003;</td>
+      <td>&#10003;</td>
+      <td>&#10003;</td>
+      <td>&#10006;</td>
+      <td>&#10003;</td>
+      <td>&#10003;</td>
+      <td>&#10006;</td>
+      <td>0</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
+<form action="/home" method="post" class="form-container mx-auto">
+  <div class="form-group"><h5>Add new habit</h5></div>
+  <div class="form-group">
+    <input
+      class="form-control"
+      type="text"
+      placeholder="Habit"
+      autocomplete="off"
+      name="habit"
+    />
+  </div>
+  <div class="form-group">
+    <button class="btn btn-primary">Add Habit</button>
+  </div>
+</form>
+
+{% endblock %}
