--- a/templates/habits.html
+++ b/templates/habits.html
@@ -5,7 +5,7 @@
   <p>HABIT TRACKER</p>
   <p>{{ date.month }} - {{ date.year }}</p>
 </div>
-<table class="table table-striped table-hover table-bordered">
+<table id="habit-grid" class="table table-striped table-hover table-bordered">
   <thead class="thead-dark">
     <tr>
       <th scope="col">Habit</th>
