--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/static/styles.css" />
     <title>{% block title %} {% endblock %}</title>
   </head>
-  {% block body_tag %}
+  {% block body_start %}
   <body>
     {% endblock %}
     <nav id="desktop-nav">
@@ -59,5 +59,7 @@
 
       navSlide();
     </script>
+    {% block body_end %}
   </body>
+  {% endblock %}
 </html>
