--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -43,6 +43,10 @@
       </div>
     </div>
   </div>
+  <div class="container-fluid p-5" style="background-color:#D5D5D5;">
+    <h1 class="text-center">Start Your Journey to a More Organized Life</h1>
+    <a href="/register"><button class="mt-4 cta-button">Get Started Now</button></a>
+  </div>
   <footer>
     <h2 class="mt-2 p-3">ODAYSSEY</h2>
     <div class="container p-2">
