--- a/templates/habits.html
+++ b/templates/habits.html
@@ -1,72 +1,77 @@
 {% extends "layout.html" %} {% block title %} Habit Tracker{% endblock %}
 {%block body %}
 
-<div class="container-homepage">
-  <p>HABIT TRACKER</p>
-  <p>{{ month_name }} - {{ date.year }}</p>
-</div>
-<div class="nav-buttons">
-  <form method="get" action="/home" class="mb-3">
-    {% set prev_month = date.month - 1 if date.month > 1 else 12 %} {% set
-    prev_year = date.year if date.month > 1 else date.year - 1 %}
-    <input
-      type="hidden"
-      name="month"
-      value="{{ prev_year }}-{{ '%02d' % prev_month }}"
-    />
-    <button type="submit" class="btn btn-secondary"><</button>
-  </form>
-  <form method="get" action="/home" class="mb-3">
-    {% set next_month = 1 if date.month == 12 else date.month + 1 %} {% set
-    next_year = date.year + 1 if date.month == 12 else date.year %}
-    <input
-      type="hidden"
-      name="month"
-      value="{{ next_year }}-{{ '%02d' % next_month }}"
-    />
-    <button type="submit" class="btn btn-secondary">></button>
-  </form>
-</div>
-<table id="habit-grid" class="table table-striped table-hover table-bordered">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">Habit</th>
-      {% for day in range(1, days_in_month + 1) %}
-      <th scope="col">{{ day }}</th>
-      {% endfor %}
-    </tr>
-  </thead>
-  <tbody>
-    {% for habit in habits %}
-    <tr>
-      <th scope="row" class="row-head">
-        {{ habit.habit }}
-        <button
-          class="del-btn btn btn-primary"
-          data-habit-id="{{ habit.id }}"
-          data-del-date="{{ date }}"
-        >
-          ␡
-        </button>
-      </th>
-      {% for date in dates %} {% set key = (habit.id, date)%} {% if key in
-      logs_dict %} {% set done = logs_dict[key][0] %} {% else %} {% set done =
-      None %} {% endif %}
+<h1 class="container pt-4 pb-2 text-center">HABIT TRACKER</h1>
+<div class="habit-container px-3 mx-3">
+  <div class="nav-buttons p-3">
+    <form method="get" action="/home">
+      {% set prev_month = date.month - 1 if date.month > 1 else 12 %} {% set
+      prev_year = date.year if date.month > 1 else date.year - 1 %}
+      <input
+        type="hidden"
+        name="month"
+        value="{{ prev_year }}-{{ '%02d' % prev_month }}"
+      />
+      <button type="submit" class="btn btn-secondary"><</button>
+    </form>
+    <div
+      class="container-fluid text-center"
+      style="font-size: xx-large; background-color: aliceblue"
+    >
+      {{ month_name }} - {{ date.year }}
+    </div>
+    <form method="get" action="/home">
+      {% set next_month = 1 if date.month == 12 else date.month + 1 %} {% set
+      next_year = date.year + 1 if date.month == 12 else date.year %}
+      <input
+        type="hidden"
+        name="month"
+        value="{{ next_year }}-{{ '%02d' % next_month }}"
+      />
+      <button type="submit" class="btn btn-secondary">></button>
+    </form>
+  </div>
+  <table id="habit-grid" class="table table-striped table-bordered">
+    <thead>
+      <tr>
+        <th scope="col" style="background-color: aliceblue">Habit</th>
+        {% for day in range(1, days_in_month + 1) %}
+        <th scope="col">{{ day }}</th>
+        {% endfor %}
+      </tr>
+    </thead>
+    <tbody>
+      {% for habit in habits %}
+      <tr class="text-center">
+        <th scope="row" class="row-head">
+          {{ habit.habit }}
+          <button
+            class="del-btn btn btn-primary"
+            data-habit-id="{{ habit.id }}"
+            data-del-date="{{ date }}"
+          >
+            ␡
+          </button>
+        </th>
+        {% for date in dates %} {% set key = (habit.id, date)%} {% if key in
+        logs_dict %} {% set done = logs_dict[key][0] %} {% else %} {% set done =
+        None %} {% endif %}
 
-      <td
-        class="habit-cell"
-        id="cell"
-        data-habit-id="{{ habit.id }}"
-        data-date="{{ date }}"
-      >
-        {% if done == True %} ✅ {% elif done == False %} ❌ {% else %} - {%
-        endif %}
-      </td>
+        <td
+          class="habit-cell"
+          id="cell"
+          data-habit-id="{{ habit.id }}"
+          data-date="{{ date }}"
+        >
+          {% if done == True %} ✅ {% elif done == False %} ❌ {% else %} - {%
+          endif %}
+        </td>
+        {% endfor %}
+      </tr>
       {% endfor %}
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
 
 <form action="/home" method="post" class="form-container mx-auto">
   <div class="form-group"><h5>Add new habit</h5></div>
