--- a/templates/habits.html
+++ b/templates/habits.html
@@ -2,7 +2,23 @@
 {%block body %}
 
 <h1 class="container pt-4 pb-2 text-center">HABIT TRACKER</h1>
-<div class="habit-container px-3 mx-3">
+<div class="habit-form-container">
+  <form action="/home" method="post" class="habit-form mx-auto">
+    <div class="form-group">
+      <input
+        class="form-control"
+        type="text"
+        placeholder="Habit"
+        autocomplete="off"
+        name="habit"
+      />
+    </div>
+    <div class="form-group">
+      <button class="btn btn-primary">Add Habit</button>
+    </div>
+  </form>
+</div>
+<div class="habit-container px-3 py-3 mx-3">
   <div class="nav-buttons p-3">
     <form method="get" action="/home">
       {% set prev_month = date.month - 1 if date.month > 1 else 12 %} {% set
@@ -31,7 +47,7 @@
       <button type="submit" class="btn btn-secondary">></button>
     </form>
   </div>
-  <table id="habit-grid" class="table table-striped table-bordered">
+  <table id="habit-grid">
     <thead>
       <tr>
         <th scope="col" style="background-color: aliceblue">Habit</th>
@@ -42,52 +58,37 @@
     </thead>
     <tbody>
       {% for habit in habits %}
-      <tr class="text-center">
+      <tr>
         <th scope="row" class="row-head">
           {{ habit.habit }}
           <button
-            class="del-btn btn btn-primary"
+            class="del-btn"
             data-habit-id="{{ habit.id }}"
             data-del-date="{{ date }}"
           >
-            ␡
+            🗑
           </button>
         </th>
         {% for date in dates %} {% set key = (habit.id, date)%} {% if key in
         logs_dict %} {% set done = logs_dict[key][0] %} {% else %} {% set done =
-        None %} {% endif %}
-
+        None %} {% endif %} {% if done == True %}
         <td
-          class="habit-cell"
-          id="cell"
+          class="habit-cell done"
           data-habit-id="{{ habit.id }}"
           data-date="{{ date }}"
-        >
-          {% if done == True %} ✅ {% elif done == False %} ❌ {% else %} - {%
-          endif %}
-        </td>
-        {% endfor %}
+        ></td>
+        {% else %}
+        <td
+          class="habit-cell"
+          data-habit-id="{{ habit.id }}"
+          data-date="{{ date }}"
+        ></td>
+        {% endif %} {% endfor %}
       </tr>
       {% endfor %}
     </tbody>
   </table>
 </div>
-
-<form action="/home" method="post" class="form-container mx-auto">
-  <div class="form-group"><h5>Add new habit</h5></div>
-  <div class="form-group">
-    <input
-      class="form-control"
-      type="text"
-      placeholder="Habit"
-      autocomplete="off"
-      name="habit"
-    />
-  </div>
-  <div class="form-group">
-    <button class="btn btn-primary">Add Habit</button>
-  </div>
-</form>
 
 <script>
   function isSameOrBefore(d1, d2) {
@@ -110,7 +111,11 @@
       })
         .then((res) => res.json())
         .then((data) => {
-          cell.innerText = data.done ? "✅" : "❌";
+          if (data.done) {
+            cell.classList.add("done");
+          } else {
+            cell.classList.remove("done");
+          }
         });
     });
   });
