--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,8 +31,8 @@
       </ul>
       {% else %}
       <ul class="nav-links">
-        <li><a href="/">Routine</a></li>
-        <li><a href="/">Tasks</a></li>
+        <li><a href="/home">Routine</a></li>
+        <li><a href="/todo">Todo</a></li>
         <li><a href="/">Journal</a></li>
         <li><a href="/logout">Logout</a></li>
       </ul>
