--- a/templates/todo.html
+++ b/templates/todo.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %} {% block title %}Todo{% endblock %} {% block body %}
-<form action="/todo" method="post" class="habit-form p-3">
+<form action="/todo" method="post" class="task-form p-3 mt-5">
   <div class="form-group">
     <input
       class="form-control"
@@ -17,15 +17,15 @@
 </form>
 <div id="todo-container">
   <div class="list-container">
-    <h3 style="text-align: center">Tasks</h3>
-    <ol>
+    <h3 class="list-head">Tasks</h3>
+    <ol id="todo-list">
       {% for row in tasks %} {% if row.done == False %}
       <li class="todo-task" data-task-id="{{ row.id }}">{{ row.task }}</li>
       {% endif %} {% endfor %}
     </ol>
   </div>
   <div class="list-container">
-    <h3 style="text-align: center">Completed tasks</h3>
+    <h3 class="list-head">Completed tasks</h3>
     <button id="clear-all-btn">Clear All</button>
     <ol id="completed-list">
       {% for row in tasks %} {% if row.done == True %}
