--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,6 +31,7 @@
       <ul class="nav-links">
         <li><a href="/home">Routine</a></li>
         <li><a href="/todo">Todo</a></li>
+        <li><a href="/dates">Dates</a></li>
         <li><a href="/journal">Journal</a></li>
         <li><a href="/logout">Logout</a></li>
       </ul>
